2005-03-11  Sushma Rai  <rsushma@novell.com>
	
	* storage/exchange-account.c (is_password_expired)
	(exchange_account_set_password): If kerberos calls with windows domain
	and domain extracted from e-mail id fail, trying again with NT domain.
	(exchange_account_connect): Storing the NT domain value in exchange
	account.
	(init): Initializing NT domain paramenter.
	(finalize): Clearing NT domain value stored.
	Fixes #72801

2005-03-11 Sivaiah Nallagatla <snallagatla@novell.com>
                                                                                           
        * calendar/e-cal-backend-exchange-calendar.c
        (add_timezone_cb) (modify_object_with_href) :
        initialize the izone to NULL before passing it
        to get_timzone.
                                                                                           
        Fixes #73505, #67740  and surely something else

2005-03-07  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #72889, #72943 and probably others.

	* camel/camel-exchange-store.c (exchange_disconnect): Removed the
	logic, put it into finalize() instead. Simply return TRUE here.
	(exchange_connect): Moved the logic into construct().
	(construct): Init the strub and connect it. This needs to happen
	here or offline mode breaks.

2005-03-10 Sivaiah Nallagatla <snallagatla@novell.com>

	* calendar/backends/e-cal-backend-exchange.c
	(remove_objects) : Make sure object is non NULL before deferencing
	it.  Fixes #73059

2005-03-10  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-tasks.c (create_task_object):
	Finding the UID from the ical component and using it while checking
	the cache, and also returning the UID back. Fixes #72041
	Changed the parameter name from comp_uid to return_uid.

	* calendar/e-cal-backend-exchange-calendar.c (create_object): Similar
	to tasks, here also reading the UID value from ical component and 
	returning it back.

2005-03-09 Sivaiah Nallagatla <snallagatla@novell.com>
